# lupnp

./: .ftpconfig  BinaryLight1.xml  CMakeCache.txt  CMakeLists.txt  ColorChange1.xml  Dimming1.xml  HardwareHandler.c  HardwareHandler.h  Makefile  README.md  SwitchPower1.xml  UpnpCore.c  UpnpCore.h  _upnp_failed.c  cmake_install.cmake  helper.c  helper.h  lupnp  main.c
Arduino Files/: Data Sender.ino
Header/: HardwareHandler.h  UpnpCore.h
MapRGB/: MapRGB.ino
Resource/: BinaryLight1.xml  ColorChange1.xml  Dimming1.xml  SensorData.txt  SensorLm1.xml  SensorPir1.xml  SwitchPower1.xml
Source/: HardwareHandler.c  Receiver.py  UpnpCore.c  main.c
